chore: fix some swag annotation mistake
