# docs/swagger.yaml
@@ -102,6 +102,16 @@ definitions:
       updatedAt:
         type: string
     type: object
+  dto.ArticleCreatedInSameMonth:
+    properties:
+      articles:
+        items:
+          $ref: '#/definitions/dto.ArticleCardsDto'
+        type: array
+      date:
+        description: yy-mm
+        type: string
+    type: object
   dto.ArticleDetailDto:
     properties:
       categoryId:
@@ -132,6 +142,57 @@ definitions:
         type: string
       updatedAt:
         type: string
+    type: object
+  dto.ArticleListDto:
+    properties:
+      articles:
+        items:
+          $ref: '#/definitions/dto.ArticleSummaryDto'
+        type: array
+      current:
+        type: integer
+      pages:
+        type: integer
+      size:
+        type: integer
+      total:
+        type: integer
+    type: object
+  dto.ArticleSummaryDto:
+    properties:
+      cover:
+        type: string
+      createdAt:
+        type: string
+      id:
+        type: integer
+      isPublish:
+        type: boolean
+      isTop:
+        type: boolean
+      owner:
+        type: string
+      summary:
+        type: string
+      title:
+        type: string
+      updatedAt:
+        type: string
+    type: object
+  dto.ArticlesClassifiedByMonthDto:
+    properties:
+      archives:
+        items:
+          $ref: '#/definitions/dto.ArticleCreatedInSameMonth'
+        type: array
+      current:
+        type: integer
+      pages:
+        type: integer
+      size:
+        type: integer
+      total:
+        type: integer
     type: object
   dto.BlogInformationDto:
     properties:
@@ -189,6 +250,17 @@ definitions:
       relatedArticleAmount:
         type: integer
     type: object
+  dto.DashboardDataDto:
+    properties:
+      articleCounts:
+        type: integer
+      articleVisitsCounts:
+        type: integer
+      categoryCounts:
+        type: integer
+      tagCounts:
+        type: integer
+    type: object
   dto.TagDto:
     properties:
       createdAt:
@@ -224,35 +296,16 @@ definitions:
       relatedArticleAmount:
         type: integer
     type: object
-  entity.Article:
+  dto.VisitsOfAWeekDto:
     properties:
-      content: {}
-      cover: {}
-      createdAt: {}
-      id: {}
-      isPublish:
-        type: boolean
-      isTop:
-        type: boolean
-      owner: {}
-      readTimes:
-        type: integer
-      summary: {}
-      title: {}
-      updatedAt: {}
-    type: object
-  service.ArticleListDto:
-    properties:
-      articles:
+      counts:
         items:
-          $ref: '#/definitions/entity.Article'
+          type: integer
         type: array
-      curPage: {}
-      pageCount:
-        type: integer
-      pageSize: {}
-      total:
-        type: integer
+      dates:
+        items:
+          type: string
+        type: array
     type: object
   service.FileUrlDto:
     properties:
@@ -338,7 +391,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/service.ArticleListDto'
+              $ref: '#/definitions/dto.ArticleListDto'
             type: array
       summary: List articles
       tags:
@@ -393,7 +446,9 @@ paths:
         required: true
         schema:
           $ref: '#/definitions/controller.reqCategory'
-      responses: {}
+      responses:
+        "201":
+          description: Created
       summary: Add category
       tags:
       - Category
@@ -468,7 +523,9 @@ paths:
         required: true
         schema:
           $ref: '#/definitions/controller.reqTag'
-      responses: {}
+      responses:
+        "201":
+          description: Created
       summary: Add tag
       tags:
       - Tag
@@ -493,9 +550,58 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/service.ArticleListDto'
+              $ref: '#/definitions/dto.ArticleListDto'
             type: array
       summary: List all articles
+      tags:
+      - Article
+  /v1/article/:id:
+    get:
+      consumes:
+      - application/json
+      description: Get article which content parsed to html
+      parameters:
+      - description: article ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.ArticleDetailDto'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/controller.ResponseData'
+      summary: Get article
+      tags:
+      - Article
+  /v1/article/archive:
+    get:
+      consumes:
+      - application/json
+      description: list archives by pagination
+      parameters:
+      - description: current page of user queried
+        in: query
+        name: current
+        required: true
+        type: integer
+      - description: single page size of user queried
+        in: query
+        name: size
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/dto.ArticlesClassifiedByMonthDto'
+            type: array
+      summary: List archive
       tags:
       - Article
   /v1/article/category/:id:
@@ -616,7 +722,33 @@ paths:
       summary: Login
       tags:
       - Login
-  /v1/tag/{amount}:
+  /v1/statistics/dashboard:
+    get:
+      consumes:
+      - application/json
+      description: get dashboard data
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.DashboardDataDto'
+      summary: Get dashboard
+      tags:
+      - Statistics
+  /v1/statistics/dashboard/pv:
+    get:
+      consumes:
+      - application/json
+      description: get article visits of a week
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.VisitsOfAWeekDto'
+      summary: Get PV
+      tags:
+      - Statistics
+  /v1/tag/:amount:
     get:
       consumes:
       - application/json
